--- a/src/public/index.hbs
+++ b/src/public/index.hbs
@@ -11,6 +11,7 @@
 <div id="root" class="theme-base-08">{{{htmlString}}}</div>
 
 <script type="application/javascript">
+    window.resourceBaseUrl = window.location.origin+'/';
     window.__INITIAL_STATE__ ={{{initialState}}};
 </script>
 <script src="/main.js"></script>
